--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
+    "clsx": "^1.1.0",
+    "firebase": "^7.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-markdown": "^4.3.1",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.5",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
